# logos_detector

./: .gitignore  README.md  makefile  pyproject.toml  section1_improvements.ipynb  section2_efficientsam.ipynb  section2_new_logos.ipynb  section2_template_matching.ipynb  section2_yolo_world.ipynb
